[package]
name = "trading_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.0", features = ["macros", "net", "rt"] }
tokio-util = { version = "0.7.0", features = ["codec"] }
tokio-stream = "0.1"
futures = "0.3"
thiserror = "1.0.30"
env_logger = "0.9"
log = "0.4.14"
